--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue-router": "^4.6.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
